styling the status and message boxes, as well as tweaking some of the html class names

--- a/openstack-dashboard/dashboard/templates/dash_usage.html
+++ b/openstack-dashboard/dashboard/templates/dash_usage.html
@@ -90,7 +90,7 @@
       </tbody>
     </table>
   {% else %}
-      <div class="status_box info">
+      <div class="message_box info">
         <h2>Info</h2>
         <p>There are currently no instances.<br/><br/>You can launch an instance from the  <a href='{% url dash_images request.user.tenant %}'>Images Page.</a></p>
       </div>
