--- a/openstack-dashboard/dashboard/templates/syspanel_create_flavor.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_create_flavor.html
@@ -13,7 +13,7 @@
 {% block syspanel_main %}
     <div class="dash_block wide form">
       <div class="left">
-        <ul class='stat_box info small'>
+        <ul class='status_box info small'>
           <li class='block'>
             <p class='overview'>{{global_summary.max_vcpus|floatformat}}<span> Cores</span></p>
             <p class='avail'>{{available_cores}} <span class='unit'>vcpu</span> <span class='label'>Available</span></p>
