--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_users.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_users.html
@@ -37,7 +37,7 @@
       </tbody>
     </table>
   {% else %}
-    <div class="status_box info">
+    <div class="message_box info">
       <h2>Info</h2>
       <p>There are currently no users for this tenant</p>
     </div>
