--- a/openstack-dashboard/dashboard/templates/syspanel_instances.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_instances.html
@@ -16,7 +16,7 @@
   {% if instances %}
     {% include '_syspanel_instance_list.html' %}
   {% else %}
-    <div class="status_box info">
+    <div class="message_box info">
       <h2>Info</h2>
       <p>There are currently no instances.  You can launch an instance from the  <a href='{% url dash_images request.user.tenant %}'>Images Page.</a></p>
     </div>
