styled usage blocks for users and tenants usage pages

--- a/openstack-dashboard/dashboard/templates/dash_usage.html
+++ b/openstack-dashboard/dashboard/templates/dash_usage.html
@@ -32,7 +32,7 @@
       </ul>
     </div>
 
-    <div class="usage_block">
+    <div class="usage_block last">
       <h3>Disk</h3>
       <ul>
         <li><span class="quantity">{{usage.total_active_disk_size|default:0}}</span><span class="unit">GB</span> Active</li>
