--- a/openstack-dashboard/dashboard/templates/syspanel_create_flavor.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_create_flavor.html
@@ -11,7 +11,7 @@
 {% endblock page_header %}
 
 {% block syspanel_main %}
-    <div class="dash_block wide form">
+    <div class="dash_block">
       <div class="left">
         <ul class='status_box info small'>
           <li class='block'>
