--- a/openstack-dashboard/dashboard/templates/dash_base.html
+++ b/openstack-dashboard/dashboard/templates/dash_base.html
@@ -5,15 +5,16 @@
     {{block.super}}
   {% endwith %}
 {% endblock %}
-{% block sidebar %}{% include '_dash_sidebar.html' %}{% endblock %}
+{% block sidebar %}
+  {% include '_dash_sidebar.html' %}
+{% endblock %}
 
 {% block main %}
   {% block page_header %}
-  {% endblock page_header %}
-
-  {% include "_messages.html" %}
+  {% endblock %}
 
   <div class='main_content'>
-  {% block dash_main %}{% endblock %}
- </div>
+    {% include "_messages.html" %}
+    {% block dash_main %}{% endblock %}
+  </div>
 {% endblock %}
