--- a/openstack-dashboard/dashboard/templates/dash_instance_update.html
+++ b/openstack-dashboard/dashboard/templates/dash_instance_update.html
@@ -12,7 +12,7 @@
 {% endblock page_header %}
 
 {% block dash_main %}
-  <div class="dash_block wide form">
+  <div class="dash_block">
     <div class="left">
       {% include '_instance_form.html' with form=form %}
       <h3><a href="{% url dash_instances request.user.tenant %}"><< Return to Instances List</a></h3>
