--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_quotas.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_quotas.html
@@ -11,8 +11,10 @@
 {% endblock page_header %}
 
 {% block syspanel_main %}
-  <div class="dash_block wide form">
-    {% include 'django_openstack/syspanel/_update_quotas_form.html' with form=form %}
+  <div class="dash_block">
+    <div class="left">
+      {% include 'django_openstack/syspanel/_update_quotas_form.html' with form=form %}
+    </div>
 
     <div class="right">
       <h3>Description:</h3>
