--- a/openstack-dashboard/dashboard/templates/syspanel_user_create.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_user_create.html
@@ -12,9 +12,10 @@
 {% endblock page_header %}
 
 {% block syspanel_main %}
-  <div class="dash_block wide form">
-
-    {% include 'django_openstack/syspanel/_create_user_form.html' %}
+  <div class="dash_block">
+    <div class="left">
+      {% include 'django_openstack/syspanel/_create_user_form.html' %}
+    </div>
 
     <div class="right">
       <h3>Description:</h3>
