--- a/openstack-dashboard/dashboard/templates/_keypair_list.html
+++ b/openstack-dashboard/dashboard/templates/_keypair_list.html
@@ -10,7 +10,7 @@
     <td>{{ keypair.fingerprint }}</td>
     <td id="actions">
       <ul>
-        <li>{% include "_delete_keypair.html" with form=delete_form %}</li>
+        <li class="form">{% include "_delete_keypair.html" with form=delete_form %}</li>
       </ul>
     </td>
   </tr>
