--- a/openstack-dashboard/dashboard/templates/_syspanel_instance_list.html
+++ b/openstack-dashboard/dashboard/templates/_syspanel_instance_list.html
@@ -25,8 +25,8 @@
       <td>{{instance.status|lower|capfirst}}</td>
       <td id="actions">
         <ul>
-          <li>{% include "_terminate.html" with form=terminate_form %}</li>
-          <li>{% include "_reboot.html" with form=reboot_form %}</li>
+          <li class="form">{% include "_terminate.html" with form=terminate_form %}</li>
+          <li class="form">{% include "_reboot.html" with form=reboot_form %}</li>
           <li><a target="_blank" href="{% url dash_instances_console instance.attrs.project_id instance.id %}">Console Log</a></li>
           <li><a target="_blank" href="{% url dash_instances_vnc instance.attrs.project_id instance.id %}">VNC Console</a></li>
         </ul>
