--- a/openstack-dashboard/dashboard/templates/_syspanel_service_list.html
+++ b/openstack-dashboard/dashboard/templates/_syspanel_service_list.html
@@ -44,7 +44,7 @@
       <td>{{service.up}}</td>
       <td id="actions">
         <ul>
-          <li>{% include "_service_toggle_enabled.html" with form=service_toggle_enabled_form %}</li>
+          <li class="form">{% include "_service_toggle_enabled.html" with form=service_toggle_enabled_form %}</li>
         </ul>
       </td>
     </tr>
