--- a/openstack-dashboard/dashboard/templates/dash_keypairs_create.html
+++ b/openstack-dashboard/dashboard/templates/dash_keypairs_create.html
@@ -37,6 +37,7 @@
       <p>Keypairs are ssh credentials which are injected into images when they are launched. Creating a new key pair registers the public key and downloads the private key (a .pem file).</p>
       <p>Protect and use the key as you would any normal ssh private key.</p>
     </div>
+    <div class="clear">&nbsp;</div>
   </div>
 {% endblock %}
 
