--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_create.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_create.html
@@ -20,6 +20,7 @@
       <h3>Description:</h3>
       <p>From here you can create a new tenant (aka project) to organize users.</p>
     </div>
+    <div class="clear">&nbsp;</div>
   </div>
 {% endblock %}
 
