--- a/openstack-dashboard/dashboard/templates/_object_list.html
+++ b/openstack-dashboard/dashboard/templates/_object_list.html
@@ -9,7 +9,7 @@
     <td id="actions">
       <ul>
         <li><a href="{% url dash_object_copy request.user.tenant container_name object.name %}">Copy</a></li>
-        <li>{% include "_delete_object.html" with form=delete_form %}</li>
+        <li class="form">{% include "_delete_object.html" with form=delete_form %}</li>
         <li><a href="{% url dash_objects_download request.user.tenant container_name object.name %}">Download</a>
       </ul>
     </td>
