--- a/openstack-dashboard/dashboard/templates/_syspanel_flavor_list.html
+++ b/openstack-dashboard/dashboard/templates/_syspanel_flavor_list.html
@@ -16,7 +16,7 @@
       <td>{{flavor.disk}}GB</td>
       <td id="actions">
         <ul>
-          <li>{% include "_delete_flavor.html" with form=delete_form %}</li>
+          <li class="form">{% include "_delete_flavor.html" with form=delete_form %}</li>
         </ul>
       </td>
     </tr>
