--- a/openstack-dashboard/dashboard/templates/syspanel_create_flavor.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_create_flavor.html
@@ -33,5 +33,6 @@
         <h3>Description:</h3>
         <p>From here you can define the sizing of a new flavor.</p>
       </div>
+      <div class="clear">&nbsp;</div>
     </div>
 {% endblock %}
