--- a/openstack-dashboard/dashboard/templates/syspanel_image_update.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_image_update.html
@@ -20,5 +20,6 @@
       <h3>Description:</h3>
       <p>From here you can modify different properties of an image.</p>
     </div>
+    <div class="clear">&nbsp;</div>
   </div>
 {% endblock %}
