--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_update.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_update.html
@@ -20,6 +20,7 @@
       <h3>Description:</h3>
       <p>From here you can edit a tenant.</p>
     </div>
+    <div class="clear">&nbsp;</div>
   </div>
 {% endblock %}
 
