--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_users.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_users.html
@@ -29,7 +29,7 @@
             <td>{{user.email}}</td>
             <td id="actions">
               <ul>
-                <li>{% include "_remove_tenant_user.html" with form=remove_user_form %}</li>
+                <li class="form">{% include "_remove_tenant_user.html" with form=remove_user_form %}</li>
               </ul>
             </td>
         </tr>
@@ -55,7 +55,7 @@
             <td>{{user}}</td>
             <td id="actions">
               <ul>
-                <li>{% include "_add_tenant_user.html" with form=add_user_form %}</li>
+                <li class="form">{% include "_add_tenant_user.html" with form=add_user_form %}</li>
               </ul>
             </td>
         </tr>
