--- a/openstack-dashboard/dashboard/templates/syspanel_user_create.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_user_create.html
@@ -21,5 +21,6 @@
       <h3>Description:</h3>
       <p>From here you can create a new user and assign them to a tenant (aka project).</p>
     </div>
+    <div class="clear">&nbsp;</div>
   </div>
 {% endblock %}
