--- a/openstack-dashboard/dashboard/templates/syspanel_user_update.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_user_update.html
@@ -21,5 +21,6 @@
       <h3>Description:</h3>
       <p>From here you can edit users by changing their usernames, emails, passwords, and tenants.</p>
     </div>
+    <div class="clear">&nbsp;</div>
   </div>
 {% endblock %}
