--- a/openstack-dashboard/dashboard/templates/_delete_object.html
+++ b/openstack-dashboard/dashboard/templates/_delete_object.html
@@ -1,4 +1,4 @@
-<form id="form_delete_{{ object.name }}" class="form-delete" method="post">
+<form id="form_delete_{{ object.name }}" class="form-delete" action="." method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}
     {{hidden}}
