--- a/openstack-dashboard/dashboard/templates/_object_list.html
+++ b/openstack-dashboard/dashboard/templates/_object_list.html
@@ -1,4 +1,4 @@
-<table id="objects" style="width: 100%">
+<table id="objects" class="wide">
   <tr>
     <th>Name</th>
     <th style="width: 100px;">Actions</th>
