--- a/openstack-dashboard/dashboard/templates/dash_object_copy.html
+++ b/openstack-dashboard/dashboard/templates/dash_object_copy.html
@@ -6,31 +6,27 @@
   {% endwith %}
 {% endblock %}
 
-{% block main %}
-  <div id='page_header'>
-    <h2><span>Object Store:</span> Objects</h2>
-    <p class='desc'><span>&mdash;</span> Copy an object.</p>
-  </div>
+{% block page_header %}
+  {% include "_page_header.html" with title="Copy Object" %}
+{% endblock page_header %}
 
-  {% include "_messages.html" %}
+{% block dash_main %}
+  <h3 class="container_name"><span>Container:</span> {{container_name}}</h3>
 
-  <div class="container-label">Container:</div>
-  <div class="container-name">{{ container_name }}</div>
-  <div style="clear: both;"></div>
-  <div class="main_content">
-    <div class="dash_block wide form">
-      <div class='title_block'>
-        <h3>Copy {{ object_name }}</h3>
-      </div>
-      <div class="left">
-        {% include '_copy_object.html' with form=copy_form greeting="HI" %}
-        <h3><a href="{% url dash_objects request.user.tenant container_name %}">&lt;&lt; Return to objects list</a></h3>
-      </div>
-
-      <div class="right">
-        <h3>Description:</h3>
-        <p>You may make a new copy of an existing object to store in this or another container.</p>
-      </div>
+  <div class="dash_block wide form">
+    <div class="left">
+      <h3>Copy Object: '{{object_name}}'</h3>
+      {% include '_copy_object.html' with form=copy_form greeting="HI" %}
+      <h3><a href="{% url dash_objects request.user.tenant container_name %}">&lt;&lt; Return to objects list</a></h3>
     </div>
+
+    <div class="right">
+      <h3>Description:</h3>
+      <p>You may make a new copy of an existing object to store in this or another container.</p>
+    </div>
+    <div class="clear">&nbsp;</div>
   </div>
+
 {% endblock %}
+
+
