--- a/openstack-dashboard/dashboard/templates/dash_objects_upload.html
+++ b/openstack-dashboard/dashboard/templates/dash_objects_upload.html
@@ -6,31 +6,25 @@
   {% endwith %}
 {% endblock %}
 
-{% block main %}
-  <div id='page_header'>
-    <h2><span>Object Store:</span> Objects</h2>
-    <p class='desc'><span>&mdash;</span> Upload an object.</p>
-  </div>
+{% block page_header %}
+  {% include "_page_header.html" with title="Upload Objects" %}
+{% endblock page_header %}
 
-  {% include "_messages.html" %}
+{% block dash_main %}
+  <h3 class="container_name"><span>Container:</span> {{ container_name }}</h3>
 
-  <div class="container-label">Container:</div>
-  <div class="container-name">{{ container_name }}</div>
-  <div style="clear: both;"></div>
-  <div class="main_content">
-    <div class="dash_block wide form">
-      <div class='title_block'>
-        <h3>Upload Object</h3>
-      </div>
-      <div class="left">
-        {% include '_object_form.html' with form=upload_form %}
-        <h3><a href="{% url dash_objects request.user.tenant container_name %}">&lt;&lt; Return to objects list</a></h3>
-      </div>
-
-      <div class="right">
-        <h3>Description:</h3>
-        <p>An object is the basic storage entity and any optional metadata that represents the files you store in the OpenStack Object Storage system. When you upload data to OpenStack Object Storage, the data is stored as-is (no compression or encryption) and consists of a location (container), the object's name, and any metadata consisting of key/value pairs.</p>
-      </div>
+  <div class="dash_block wide form">
+    <div class="left">
+      {% include '_object_form.html' with form=upload_form %}
+      <h3><a href="{% url dash_objects request.user.tenant container_name %}">&lt;&lt; Return to objects list</a></h3>
     </div>
+
+    <div class="right">
+      <h3>Description:</h3>
+      <p>An object is the basic storage entity and any optional metadata that represents the files you store in the OpenStack Object Storage system. When you upload data to OpenStack Object Storage, the data is stored as-is (no compression or encryption) and consists of a location (container), the object's name, and any metadata consisting of key/value pairs.</p>
+    </div>
+    <div class="clear">&nbsp;</div>
   </div>
+
 {% endblock %}
+
