--- a/openstack-dashboard/dashboard/templates/_object_filter.html
+++ b/openstack-dashboard/dashboard/templates/_object_filter.html
@@ -1,10 +1,7 @@
 <form id="form_filter_{{ container_name }}" class="form-filter" method="post">
   {% csrf_token %}
-  {% for hidden in form.hidden_fields %}
-    {{hidden}}
-  {% endfor %}
-  {% for field in form.visible_fields %}
-    {{field}}
-  {% endfor %}
-  <input id="filter_{{ container_name }}" class="filter" type="submit" value="Filter" />
+  {% for hidden in form.hidden_fields %}{{hidden}}{% endfor %}
+  {% for field in form.visible_fields %}{{field}}{% endfor %}
+  <label for="table_search">Search</label>
+  <input id="table_search" class="filter" type="submit" value="Filter" style="font-size:11px;"/>
 </form>
